images stretching corrected for medium and big screens

--- a/blog-post/css/comments-card.css
+++ b/blog-post/css/comments-card.css
@@ -155,8 +155,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0;
-    padding: 0;
+    margin: 0 auto;
+    padding: 0 auto;
   }
 
   .comment-button-container {
@@ -181,11 +181,14 @@
 
   .horisontal-line {
     margin: 0 29px 0 10px;
+    max-width: 100%;
+    width: 620px;
   }
 
   .personal-comment {
-    margin: 0;
-    width: 100vw;
+    margin: 0 auto;
+    max-width: 100%;
+    width: 650px;
     position: relative;
   }
 
