--- a/blog-website/css/header.css
+++ b/blog-website/css/header.css
@@ -1,13 +1,14 @@
 .naming {
-  margin: 0;
+  margin: auto;
   padding-top: 15px;
-  font: 84px "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+  font: 83px "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-weight: 200;
   text-transform: uppercase;
   letter-spacing: 5px;
-  word-spacing: 25px;
+  word-spacing: 23px;
   color: black;
+  word-break: normal;
 }
 
 /* Small Screens */
