--- a/blog-website/css/main.css
+++ b/blog-website/css/main.css
@@ -13,15 +13,17 @@ body {
   font-family: Arial;
   background: #fbf8f4;
   color: #666;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
+  display: block;
 }
 
 .container {
   display: grid;
   width: 100%;
   height: 100%;
-  margin: auto;
-  grid-template-columns: repeat(3, 4fr);
+  /* margin: auto; */
+  /* grid-template-columns: repeat(3, 4fr); */
+  grid-template-columns: repeat(auto-fit, minmax(730px, 1fr));
   grid-template-rows: auto auto 1fr auto;
   grid-gap: 10px;
   grid-template-areas:
@@ -30,6 +32,10 @@ body {
     "main   main   side"
     "footer footer footer";
     overflow: hidden;
+    position: relative;
+    max-width: 1080px;
+    padding: 0 15px;
+    margin: 0 auto;
 }
 
 .box {
@@ -82,20 +88,27 @@ main {
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
+  overflow: hidden;
+  max-width: 100%;
+  width: 750px;
+  position: relative;
 }
 
 aside {
   grid-area: side;
   display: grid;
   grid-gap: 15px;
-  grid-template-columns: 1fr;
+  grid-template-columns: 1fr; 
   grid-template-rows: minmax(100px, auto);
   height: fit-content;
-  position: relative;
+  max-width: 100%;
+  width: 100%;
 }
 
 /* TODO:  Add a card for additional info */
 .side-card {
+  max-width: 100%;
+  width: 270px;
   margin: 34px;
   background-color: #fff;
   height: fit-content;
@@ -130,6 +143,9 @@ aside {
       "main"
       "side"
       "footer";
+      max-width: 600px;
+      padding: 0 15px;
+      margin: 0 auto;
   }
 
   .header {
@@ -212,8 +228,8 @@ main {
 @media (min-width: 768px) and (max-width: 992px) {
   .container {
     display: grid;
-    margin: auto;
-    grid-template-columns: 1fr;
+    /* grid-template-columns: 1fr; */
+    grid-template-columns: repeat(auto-fit, minmax(530px, 1fr));
     grid-template-rows: auto auto 1fr auto auto;
     grid-gap: 5px;
     height: fit-content;
@@ -223,6 +239,9 @@ main {
       "main"
       "side"
       "footer";
+      max-width: 992px;
+      padding: 0 auto;
+      margin: 0 auto;
   }
 
 
@@ -257,9 +276,10 @@ main {
   .leb-menu {
     border-bottom: 1px solid #e13d3d;
     display: block;
-    width: 100vw;
+    max-width: 100%;
+    width: 700px;
     position: relative;
-    margin: 0;
+    margin: 0 auto;
   }
 
    
@@ -267,23 +287,30 @@ main {
   grid-area: main;
   display: flex;
   flex-direction: column;
-  margin: 0;
+  margin: 0 auto;
   height: fit-content;
 }
 
   .post-card {
-    margin: 0;
-    padding: 0;
+    margin: 0 auto;
+    padding: 0 auto;
+    width: 680px;
+    height: fit-content;
   }
 
+
   aside {
-    margin: 0 auto;
-    width: 45%;
+    margin:  0 auto;
+    max-width: 80%;
+    width: 65%;
+    /* width: 45%; */
     grid-gap: 10px;
   }
   
   .side-card {
-    margin: 0;
+    max-width: 100%;
+    width: 45%;
+    margin: 0 auto;
     background-color: #fff;
     height: fit-content;
   }
