--- a/blog-website/css/post-card.css
+++ b/blog-website/css/post-card.css
@@ -41,6 +41,8 @@
   cursor: pointer;
 }
 
+
+
 .read-more-button {
   margin-bottom: 0;
 }
@@ -52,15 +54,19 @@
 
 .image-container {
   overflow: hidden;
+  position: relative;
   height: 450px;
   width: 100%;
   margin-top: 10px;
 }
 
 .image-container img {
-  width: 100%;
-  height: 100%;
-  object-fit: fill;
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  object-fit: cover; 
+  position: absolute;
+  margin: auto;
 }
 
 .comments-line {
@@ -259,12 +265,49 @@
     padding-right: 15px;
   }
 
+  .image-container {
+    overflow: hidden;
+    position: relative;
+    height: 440px;
+    width: 100%;
+    margin: 0 auto;
+  }
+  
+  .image-container img {
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
+    object-fit: cover; 
+    position: absolute;
+    margin: 0 auto;
+    display: block;
+  }
 
+  #big-image {
+    overflow: hidden;
+    position: relative;
+    height: 372px;
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  #big-image img {
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
+    object-fit: cover; 
+    position: absolute;
+    margin: 0 auto;
+    display: block;
+  }
+/* 
 .image-container {
 margin: 0;
 height: 100%;
 width: 100vw;
-}
+} */
 
   .read-more-button {
     font-size: 14px;
