--- a/blog-website/css/side-card.css
+++ b/blog-website/css/side-card.css
@@ -6,15 +6,19 @@
 
 .about-image-container {
   overflow: hidden;
+  position: relative;
   height: 255px;
   width: 100%;
   margin-top: 0;
 }
 
 .about-image-container img {
-  width: 100%;
-  height: 100%;
-  object-fit: contan;
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  object-fit: cover;
+  position: absolute;
+  margin: auto;
 }
 
 .about-link {
